--- a/src/Template/cup/system/index.twig
+++ b/src/Template/cup/system/index.twig
@@ -5,8 +5,8 @@
         <div class="card card-block" style="width: 630px;">
             <div class="card-header text-center">
                 <h4 class="card-title">
-                    Установка и обновление платформы
-                    WebSpace Engine
+                    {{ user == null ? 'Установка' : 'Обновление' }}
+                    платформы WebSpace Engine
                 </h4>
             </div>
 
